--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 44c361e
+	base = d186c61
 	trimbase = 
 	parent = release/groovy/opencv2_doc
-	previous = 
+	previous = 44c361e
