--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 72c875e
+	base = 456b364
 	trimbase = 
 	parent = debian/groovy/opencv2_doc
-	previous = 
+	previous = 72c875e
