--- a/tracks.yaml
+++ b/tracks.yaml
@@ -16,7 +16,7 @@ tracks:
     release_tag: :{version}
     ros_distro: groovy
     vcs_type: git
-    vcs_uri: https://github.com/Itseez/opencv.git
+    vcs_uri: /home/vrabaud/software/opencv
     version: :{ask}
   hydro:
     actions:
