--- a/tracks.yaml
+++ b/tracks.yaml
@@ -34,5 +34,5 @@ tracks:
     release_tag: :{version}
     ros_distro: hydro
     vcs_type: git
-    vcs_uri: https://github.com/Itseez/opencv.git
+    vcs_uri: /home/vrabaud/software/opencv
     version: :{ask}
