--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 35ffd36
+	base = 2ae40b2
 	trimbase = 
 	parent = release/hydro/opencv2_doc
-	previous = 
+	previous = 35ffd36
