--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a8432db
+	base = d6b1fb1
 	trimbase = 
 	parent = debian/hydro/opencv2_doc
-	previous = 
+	previous = a8432db
