--- a/tracks.yaml
+++ b/tracks.yaml
@@ -32,7 +32,8 @@ tracks:
     name: opencv2_doc
     patches: hydro
     release_inc: '2'
-    release_tag: :{version}
+    release_repo_url: null
+    release_tag: :{ask}
     ros_distro: hydro
     vcs_type: git
     vcs_uri: /home/vrabaud/software/opencv
