--- a/tracks.yaml
+++ b/tracks.yaml
@@ -13,7 +13,8 @@ tracks:
     name: opencv2_doc
     patches: groovy
     release_inc: '6'
-    release_tag: :{version}
+    release_repo_url: null
+    release_tag: :{ask}
     ros_distro: groovy
     vcs_type: git
     vcs_uri: /home/vrabaud/software/opencv
